# AI-Bot-for-Retrospective-Insights

./: .env.example  .gitignore  AZURE_OPENAI_FIX.md  DASHBOARD_AI_IMPLEMENTATION.md  DASHBOARD_IMPLEMENTATION_SUMMARY.md  DESIGN_DOCUMENT.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  MIGRATION_TO_UV.md  PHASE_6_IMPLEMENTATION.md  PHASE_7_FRONTEND_IMPLEMENTATION.md  PROJECT_COMPLETE.md  QUICKSTART_DASHBOARD.md  README.md  UV_MIGRATION_COMPLETE.md  UV_SETUP.md  docker-compose.yml  env.template  pyproject.toml  pytest.ini  setup_uv.ps1  setup_uv.sh
.cursor/plan/: ai-retrospective-insights-system.plan.md
.cursor/rules/: python-project-rule.mdc
examples/: __init__.py  dashboard_ai_demo.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/pages/: Dashboard.tsx  ReportDetailPage.tsx  ReportsPage.tsx  TasksPage.tsx
frontend/src/services/: api.ts
src/analysis/: experiments.py  hypothesis.py  langgraph_agent.py  llm_integration.py  report_assembler.py  statistical.py
src/api/: __init__.py  dependencies.py  main.py
src/api/routers/: dashboard.py  health.py  metrics.py  reports.py  tasks.py
src/charts/: generators.py
src/core/: celery_app.py  config.py  database.py  models.py
src/tasks/: analysis_tasks.py
src/utils/: dashboard_client.py  metrics_client.py
tests/: conftest.py  test_api_health.py  test_api_metrics.py  test_api_reports.py  test_api_tasks.py  test_azure_openai.py  test_celery_tasks.py  test_core_config.py  test_core_database.py  test_core_models.py  test_dashboard_client.py  test_experiments.py  test_hypothesis.py  test_langgraph_agent.py  test_metrics_client.py  test_statistical.py
