[project]
name = "ai-retrospective-insights"
version = "1.0.0"
description = "AI-powered system for analyzing team metrics and generating retrospective insights"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]

dependencies = [
    # FastAPI and server
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    
    # Database
    "sqlalchemy>=2.0.35",
    "alembic>=1.13.1",
    
    # Celery and async
    "celery==5.3.6",
    "redis==5.0.1",
    
    # Data processing and analysis
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    
    # Charts
    "plotly==5.18.0",
    
    # LLM Integration
    "openai==1.10.0",
    "anthropic==0.18.0",
    
    # HTTP client
    "httpx==0.26.0",
    "requests==2.31.0",
    
    # Configuration
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
    
    # Code quality
    "black==24.1.1",
    "flake8==7.0.0",
    "mypy==1.8.0",
]
postgres = [
    # PostgreSQL support (optional, for production)
    "psycopg2-binary==2.9.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--tb=short",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

